Generate Pelican site

--- a/3-annoying-things-about-programming.html
+++ b/3-annoying-things-about-programming.html
@@ -83,6 +83,11 @@
 
       <ul class="social">
           <li>
+            <a  class="sc-twitter" href="https://camila.codes" target="_blank">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
             <a  class="sc-goodreads" href="https://www.goodreads.com/thewomensroom" target="_blank">
               <i class="fab fa-goodreads"></i>
             </a>
