Generate Pelican site

--- a/3-annoying-things-about-programming.html
+++ b/3-annoying-things-about-programming.html
@@ -62,7 +62,7 @@
         <a href="https://camila.codes">Camila</a>
       </h1>
 
-<p>Bits with anxiety disorder. Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>. she/her. <br><small>GPG Key ID D406 C75C EE1A 36D6</small></p>
+<p>Bits with anxiety disorder. Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>. she/her. <br><small><a href="mailto:hello@camila.codes">hello@camila.codes</a><br>GPG Key ID D406 C75C EE1A 36D6</small></p>
 
       <nav>
         <ul class="list">
@@ -82,11 +82,6 @@
       </nav>
 
       <ul class="social">
-          <li>
-            <a  class="sc-email" href="hello@camila.codes" target="_blank">
-              <i class="fab fa-email"></i>
-            </a>
-          </li>
           <li>
             <a  class="sc-goodreads" href="https://www.goodreads.com/thewomensroom" target="_blank">
               <i class="fab fa-goodreads"></i>
