Update configuration, pelicanconf file, css...

--- a/output/3-annoying-things-about-programming.html
+++ b/output/3-annoying-things-about-programming.html
@@ -10,20 +10,20 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://camila.codes/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="/theme/pygments/github.min.css">
+          href="https://camila.codes/theme/pygments/github.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://camila.codes/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://camila.codes/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://camila.codes/theme/font-awesome/css/solid.css">
 
-    <link href="/assets/css/custom.css" rel="stylesheet">
+    <link href="https://camila.codes/assets/css/custom.css" rel="stylesheet">
 
-    <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bits with anxiety disorder Atom">
+    <link href="https://camila.codes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bits with anxiety disorder Atom">
 
 
 
@@ -38,11 +38,11 @@
 <meta property="og:title" content="3 annoying things about programming"/>
 <meta property="og:description" content="3 annoyingthingsabout programming (slides in PDF)"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/3-annoying-things-about-programming.html"/>
+<meta property="og:url" content="https://camila.codes/3-annoying-things-about-programming.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2020-05-02 11:00:00+02:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="/author/camila.html">
+<meta property="article:author" content="https://camila.codes/author/camila.html">
 <meta property="article:section" content="Personal"/>
 <meta property="article:tag" content="programming"/>
 <meta property="article:tag" content="presentation"/>
@@ -54,15 +54,15 @@
 <body class="light-theme">
   <aside>
     <div>
-      <a href="">
-        <img src="/theme/img/profile.png" alt="Camila" title="Camila">
+      <a href="https://camila.codes">
+        <img src="https://camila.codes/theme/img/profile.png" alt="Camila" title="Camila">
       </a>
 
       <h1>
-        <a href="">Camila</a>
+        <a href="https://camila.codes">Camila</a>
       </h1>
 
-<p>Bits with anxiety disorder. Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>. she/her. <br><small>GPG Key ID D406 C75C EE1A 36D6<small></p>
+<p>Bits with anxiety disorder. she/her.<br>Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>.  <br><small><a href="mailto:hello@camila.codes">hello@camila.codes</a><br>GPG Key ID D406 C75C EE1A 36D6</small></p>
 
       <nav>
         <ul class="list">
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li>
-            <a  class="sc-twitter" href="https://camila.codes" target="_blank">
+            <a  class="sc-twitter" href="https://twitter.com/camilacodes" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
@@ -109,13 +109,13 @@
   <main>
 
     <nav>
-      <a href="">Home</a>
+      <a href="https://camila.codes">Home</a>
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
       <a href="/tags.html">Tags</a>
 
-      <a href="/feeds/all.atom.xml">Atom</a>
+      <a href="https://camila.codes/feeds/all.atom.xml">Atom</a>
 
     </nav>
 
@@ -124,7 +124,7 @@
       
     <h1 id="3-annoying-things-about-programming">3 annoying things about programming</h1>
     <p>
-      Posted on 02 May 2020 in <a href="/category/personal.html">Personal</a>
+      Posted on 02 May 2020 in <a href="https://camila.codes/category/personal.html">Personal</a>
 
     </p>
   </header>
@@ -136,8 +136,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/programming.html">programming</a>
-      <a href="/tag/presentation.html">presentation</a>
+      <a href="https://camila.codes/tag/programming.html">programming</a>
+      <a href="https://camila.codes/tag/presentation.html">presentation</a>
     </p>
   </div>
 
@@ -175,7 +175,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Bits with anxiety disorder ",
-  "url" : "",
+  "url" : "https://camila.codes",
   "image": "",
   "description": ""
 }
