--- a/3-annoying-things-about-programming.html
+++ b/3-annoying-things-about-programming.html
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li>
-            <a  class="sc-twitter" href="https://twitter.com/bitswithanxiety" target="_blank">
+            <a  class="sc-twitter" href="https://twitter.com/cmlaaaa" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
