Generate Pelican site

--- a/3-annoying-things-about-programming.html
+++ b/3-annoying-things-about-programming.html
@@ -23,7 +23,7 @@
 
     <link href="https://camila.codes/assets/css/custom.css" rel="stylesheet">
 
-    <link href="https://camila.codes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Would it save you a lot of time if I just gave up and went mad now? Atom">
+    <link href="https://camila.codes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Not centered, not calm Atom">
 
 
 
@@ -34,7 +34,7 @@
 <meta name="keywords" content="programming, presentation">
 
 
-<meta property="og:site_name" content="Would it save you a lot of time if I just gave up and went mad now?"/>
+<meta property="og:site_name" content="Not centered, not calm"/>
 <meta property="og:title" content="3 annoying things about programming"/>
 <meta property="og:description" content="3 annoyingthingsabout programming (slides in PDF)"/>
 <meta property="og:locale" content="en_US"/>
@@ -48,7 +48,7 @@
 <meta property="article:tag" content="presentation"/>
 <meta property="og:image" content="">
 
-  <title>Would it save you a lot of time if I just gave up and went mad now? &ndash; 3 annoying things about programming</title>
+  <title>Not centered, not calm &ndash; 3 annoying things about programming</title>
 
 </head>
 <body class="light-theme">
@@ -174,7 +174,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Would it save you a lot of time if I just gave up and went mad now? ",
+  "name": " Not centered, not calm ",
   "url" : "https://camila.codes",
   "image": "",
   "description": ""
