--- a/output/3-annoying-things-about-programming.html
+++ b/output/3-annoying-things-about-programming.html
@@ -23,7 +23,7 @@
 
     <link href="https://camila.codes/assets/css/custom.css" rel="stylesheet">
 
-    <link href="https://camila.codes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bits with anxiety disorder Atom">
+    <link href="https://camila.codes/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Not centered, not calm Atom">
 
 
 
@@ -34,7 +34,7 @@
 <meta name="keywords" content="programming, presentation">
 
 
-<meta property="og:site_name" content="Bits with anxiety disorder"/>
+<meta property="og:site_name" content="Not centered, not calm"/>
 <meta property="og:title" content="3 annoying things about programming"/>
 <meta property="og:description" content="3 annoyingthingsabout programming (slides in PDF)"/>
 <meta property="og:locale" content="en_US"/>
@@ -48,7 +48,7 @@
 <meta property="article:tag" content="presentation"/>
 <meta property="og:image" content="">
 
-  <title>Bits with anxiety disorder &ndash; 3 annoying things about programming</title>
+  <title>Not centered, not calm &ndash; 3 annoying things about programming</title>
 
 </head>
 <body class="light-theme">
@@ -62,7 +62,7 @@
         <a href="https://camila.codes">Camila</a>
       </h1>
 
-<p>Bits with anxiety disorder. she/her.<br>Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>.  <br><small><a href="mailto:hello@camila.codes">hello@camila.codes</a><br>GPG Key ID D406 C75C EE1A 36D6</small></p>
+<p>Not centered, not calm. she/her.<br>Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>.  <br><small><a href="mailto:hello@camila.codes">hello@camila.codes</a><br>GPG Key ID D406 C75C EE1A 36D6</small></p>
 
       <nav>
         <ul class="list">
@@ -93,7 +93,7 @@
             </a>
           </li>
           <li>
-            <a  class="sc-twitter" href="https://twitter.com/camilacodes" target="_blank">
+            <a  class="sc-twitter" href="https://twitter.com/cmlaaaa" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
@@ -174,7 +174,7 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Bits with anxiety disorder ",
+  "name": " Not centered, not calm ",
   "url" : "https://camila.codes",
   "image": "",
   "description": ""
