Generate Pelican site

--- a/drafts/1-anxiety-oriented-programming.html
+++ b/drafts/1-anxiety-oriented-programming.html
@@ -29,16 +29,26 @@
 
 
 
-    <meta name="author" content="Camila" />
-    <meta name="description" content="" />
-<meta property="og:site_name" content="Not centered, not calm"/>
-<meta property="og:type" content="blog"/>
-<meta property="og:title" content="Not centered, not calm"/>
-<meta property="og:description" content=""/>
-<meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://camila.codes"/>
+<meta name="author" content="Camila" />
+<meta name="description" content="I have to read about rebase every time I know the process will be painful https://dev.to/jacobherrington/git-rebase-explained-simply-k0a https://codeinthehole.com/guides/resolving-conflicts-during-a-git-rebase/" />
+<meta name="keywords" content="programming, git">
 
-  <title>Not centered, not calm &ndash; Tag programming</title>
+
+<meta property="og:site_name" content="Not centered, not calm"/>
+<meta property="og:title" content="#1 Anxiety Oriented Programming"/>
+<meta property="og:description" content="I have to read about rebase every time I know the process will be painful https://dev.to/jacobherrington/git-rebase-explained-simply-k0a https://codeinthehole.com/guides/resolving-conflicts-during-a-git-rebase/"/>
+<meta property="og:locale" content="en_US"/>
+<meta property="og:url" content="https://camila.codes/drafts/1-anxiety-oriented-programming.html"/>
+<meta property="og:type" content="article"/>
+<meta property="article:published_time" content="2020-06-08 11:00:00+02:00"/>
+<meta property="article:modified_time" content=""/>
+<meta property="article:author" content="https://camila.codes/author/camila.html">
+<meta property="article:section" content="Personal"/>
+<meta property="article:tag" content="programming"/>
+<meta property="article:tag" content="git"/>
+<meta property="og:image" content="">
+
+  <title>Not centered, not calm &ndash; #1 Anxiety Oriented Programming</title>
 
 </head>
 <body class="light-theme">
@@ -109,27 +119,36 @@
 
     </nav>
 
-
-
-<article>
+<article class="single">
   <header>
-    <h2><a href="https://camila.codes/3-annoying-things-about-programming.html#3-annoying-things-about-programming">3 annoying things about programming</a></h2>
+      
+    <h1 id="1-anxiety-oriented-programming">#1 Anxiety Oriented Programming</h1>
     <p>
-      Posted on 02 May 2020 in <a href="https://camila.codes/category/personal.html">Personal</a>
-
+      Posted on 08 June 2020 in <a href="https://camila.codes/category/personal.html">Personal</a>
 
     </p>
   </header>
+
+
   <div>
-      <p><embed src="assets/3annoyingthingsaboutprogramming/slides.pdf" type="application/pdf" width="100%" height="600px" />
-<a href="assets/3annoyingthingsaboutprogramming/slides.pdf">3 annoyingthingsabout programming (slides in PDF)</a></p>
+    <h1>I have to read about rebase every time I know the process will be painful</h1>
+<ul>
+<li>https://dev.to/jacobherrington/git-rebase-explained-simply-k0a</li>
+<li>https://codeinthehole.com/guides/resolving-conflicts-during-a-git-rebase/</li>
+</ul>
   </div>
+  <div class="tag-cloud">
+    <p>
+      <a href="https://camila.codes/tag/programming.html">programming</a>
+      <a href="https://camila.codes/tag/git.html">git</a>
+    </p>
+  </div>
+
+
+
+
+
 </article>
-
-  <div class="pagination">
-  </div>
-
-
 
     <footer>
 <p>
