--- a/3-annoying-things-about-programming.html
+++ b/3-annoying-things-about-programming.html
@@ -62,7 +62,7 @@
         <a href="https://camila.codes">Camila</a>
       </h1>
 
-<p>🇧🇷&nbsp;🇩🇪&nbsp;Not centered, not calm.&nbsp;she/her.<br>👩‍💻&nbsp;Coding <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>.<br><small>💌&nbsp;<a href="mailto:hello@camila.codes">hello@camila.codes</a><br>🗝️&nbsp;GPG Key ID D406 C75C EE1A 36D6</small></p>
+<p>Not centered, not calm. she/her.<br>From &nbsp;🇧🇷, living in &nbsp;🇩🇪.<br>▪<br>Working with <a href="https://github.com/nextcloud/desktop">C++ and Qt</a> @ <a href="https://nextcloud.com">Nextcloud</a>.<br>▪<br>💌&nbsp;<a href="mailto:hello@camila.codes">hello@camila.codes</a><br>🗝️&nbsp;GPG Key ID D406 C75C EE1A 36D6</p>
 
       <nav>
         <ul class="list">
