--- a/tags.html
+++ b/tags.html
@@ -83,7 +83,7 @@
             </a>
           </li>
           <li>
-            <a  class="sc-twitter" href="https://twitter.com/cmlaaaa" target="_blank">
+            <a  class="sc-twitter" href="https://twitter.com/camilacodes" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
           </li>
@@ -122,7 +122,7 @@
 
     <footer>
 <p>
-  &copy; Camila 2020 - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
+  &copy; Camila 2021 - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
